--- a/Metamorphic_Testing_Framework_for_LLM.ipynb
+++ b/Metamorphic_Testing_Framework_for_LLM.ipynb
@@ -58,8 +58,8 @@
     "\n",
     "# %%\n",
     "# Configuration\n",
-    "# API_KEY = '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'\n",
-    "API_KEY = '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'\n",
+    "# API_KEY = '####'\n",
+    "API_KEY = 'sk-or-v1-####'\n",
     "\n",
     "# chose which LLM models to test\n",
     "MODELS = {\n",
